--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,11 +29,20 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
+          cache: true
 
       - name: Install Zig
         uses: goto-bus-stop/setup-zig@v2
         with:
           version: 0.13.0
+
+      - name: Cache libpcap builds
+        uses: actions/cache@v4
+        with:
+          path: .libs
+          key: libpcap-${{ hashFiles('scripts/setup-build-deps.sh') }}-v1
+          restore-keys: |
+            libpcap-
 
       - name: Install build tools
         run: sudo apt-get update && sudo apt-get install -y flex bison
